# 1D-Gasflow

./: .gitignore  BACKLOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: grid_sizing_study.md
examples/: skarv_flare_blowdown.py
gas_pipe/: __init__.py  __main__.py  chain.py  device.py  diagnostics.py  eos.py  errors.py  fittings.py  friction.py  geometry.py  gui.py  gui_widgets.py  results.py  segment.py  solver.py
studies/grid_sweep/: results.csv  results.md  run_sweep.py
tests/: conftest.py  test_aga_isothermal.py  test_backward_march.py  test_chain.py  test_choking.py  test_device.py  test_eos.py  test_eos_table.py  test_fanno_analytic.py  test_fittings.py  test_friction.py  test_heat_transfer.py  test_hem_throat.py  test_jt_cooling.py  test_multi_section.py  test_two_phase.py
tests/data/: hem_skarv_choked_direct.json  hem_skarv_subcritical_direct.json
