[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gas-pipe"
version = "2.0.0"
description = "1D steady-state compressible single-phase gas pipe flow solver"
requires-python = ">=3.11"
dependencies = [
    "coolprop>=6.6",
    "numpy>=1.24",
    "scipy>=1.11",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gas_pipe*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py311"
